--- a/hackathonvolunteer-certificates.html
+++ b/hackathonvolunteer-certificates.html
@@ -156,8 +156,7 @@
       line-height:1.55;
       white-space:pre-wrap;
       word-break:break-word;
-      max-height:260px;
-      overflow:auto;
+      overflow:visible;
     }
 
     /* Cards, checklist, FAQ */
